--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav navbar-right">
-		        <li class="active"><a href="#">graphic design <span class="sr-only">(current)</span></a></li>
-		        <li><a href="#">illustration</a></li>
-		        <li><a href="#">photography</a></li>
-		        <li><a href="#">contact</a></li>
+		        <li><a href="#graphic-design">graphic design</a></li>
+		        <li><a href="#illustration">illustration</a></li>
+		        <li><a href="#photography">photography</a></li>
+		        <li><a href="#footer">contact</a></li>
 		        
 		      </ul>
 		     
@@ -43,21 +43,20 @@
 	
 	<!-- logo section -->
 	<div class="jumbotron">
-		<div class="container">
-			<div class="kblogo parent">
-				<img class="img-responsive" src="img/kb-logo-big.png" alt="logo" >
-			</div>
+		<div class="container kblogo">
+			<img class="img-responsive" src="img/kb-logo-big.png" alt="logo" >
+			
 		</div>
 	</div>
 
 	<!-- end logo section -->
-
-	
-
-
-	<div class="container">
-		<div class="row spacer"></div>
+<div class="container">
+	<div class="row">
+		<div class="left"></div>
+		<div class="right"></div>
 	</div>
+</div>
+	
 
 <!-- graphic design -->
 	
@@ -91,9 +90,7 @@
 	</section>
 	<!-- end of graphic design -->
 
-<div class="container">
-		<div class="row spacer"></div>
-	</div>
+
 
 	<!-- illustration -->
 	<section id="illustration">
@@ -126,9 +123,7 @@
 	</section>
 	<!-- end of illustration -->
 
-	<div class="container">
-		<div class="row spacer"></div>
-	</div>
+	
 	<!-- photography -->
 	<section id="photography">
 	<div class="container-fluid">
@@ -161,6 +156,7 @@
 	<!-- end of photography -->
 
 	<!-- footer -->
+	<section id="footer">
 	<footer>
 		<div class="container">
 			<div class="row">
@@ -190,6 +186,7 @@
 			</div>
 		</div>
 	</footer>
+	</section>
 	<!-- end footer -->
 
 	<!-- javascript -->
